# RayTracer2.0

./: CMakeLists.txt  README.md  main.cxx  matrix.h  normal.h  point.h  vector.h
include/: bbox.h  color.h  constants.h  mesh.h  multipleobjects.h  normal.h  object.h  plane.h  point.h  ray.h  shaderec.h  singlesphere.h  sphere.h  vector.h  viewplane.h  world.h
includes/: README.md  color.h  multipleobjects.h  plane.h  singlesphere.h  sphere.h  tracer.h  vector.h  viewplane.h  world.h
includes/brdfs/: brdf.h  glossyspecular.h  lambertian.h
includes/cameras/: camera.h  pinhole.h
includes/lights/: ambient.h  directional.h  light.h
includes/materials/: material.h  phong.h
includes/objects/: object.h  plane.h  sphere.h  triangle.h
includes/samplers/: jittered.h  multijittered.h  regular.h  sampler.h
includes/toolbox/: bbox.h  color.h  constants.h  functions.h  mesh.h  normal.h  point.h  ray.h  shaderec.h  vector.h
includes/tracers/: multipleobjects.h  raycast.h  singlesphere.h  tracer.h
src/: CMakeLists.txt  README.md  raytracer.cxx
tests/: README.txt  runtests  runtests.sh
tests/baseline/: mesh_out.txt  ray_out.txt  vector_out.txt
tests/results/: color.txt  point.txt
tests/testingfilesrc/: color.cpp  mesh.cpp  point.cpp  ray.cpp  vector.cpp
